    - patches/powerpc/local-powerpc8xx-dcbz.diff: new patch from the eglibc
      tree to workaround dcbz issues on PowerPC 8XX CPUs.
    - patches/sh4/local-fpscr_values.diff: new patch from eglibc tree to
      export the ___fpscr_values symbol on SH4.
    - patches/any/local-libpic.diff: new patch from eglibc tree to install
      *_pic.a files.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 May 2014 12:38:51 +0200

eglibc (2.19-1) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/control.in/main: remove outdated Build-Depends on bzip2.
  * debian/patches/any/cvs-resolv-reuse-fd.diff: new patch from upstream
    to fix invalid file descriptor reuse while sending DNS query.  Closes:
    #722075.
  * Finish debconf translation update from Esko Arajärvi.  Closes: #750124.
  * debian/patches/git-updates.diff: update from the 2.19 branch:
    - fixes pthread_spin_lock on sparc/sparc64.  Closes: #749087.
  * debian/patches/any/submitted-argp-attribute.diff: new patch from Ondřej
    Bílka to fix string functions with FORTIFY_SOURCE=2 when <argp.h> is
    included before <string.h>.  Closes: #647084.
  * debian/sysdeps/{sparc,sparc64}.mk: temporarily pass --disable-multiarch
    to configure to try to fix random segmentation faults on Niagara 1
    machines.

  [ Samuel Thibault ]
  * hurd-i386/unsubmitted-pthread_posix-option.diff: Split patches into...
  * ... hurd-i386/tg-{posix_thread,gai_misc}.diff.
  * patches/hurd-i386/cvs-libpthread_guardsize.diff: Fix guard size
    computation and enable again.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 04 Jun 2014 20:32:06 +0200

eglibc (2.19-0experimental0) experimental; urgency=medium

  [ Adam Conrad ]
  * New upstream release: version 2.19, orig tarball built at SVN r25252:
    - debian/patches/alpha/local-string-functions.diff: Rebased.
    - debian/patches/any/local-disable-test-tgmath2.diff: Rebased.
    - debian/patches/any/local-localedef-fix-trampoline.diff: Rebased.