@@ -13481,7 +13481,7 @@
 +sysd-rules-patterns += ptw-%:%
 --- /dev/null
 +++ b/fbtl/Makefile
-@@ -0,0 +1,655 @@
+@@ -0,0 +1,636 @@
 +# Copyright (C) 2002-2013 Free Software Foundation, Inc.
 +# This file is part of the GNU C Library.
 +
@@ -13502,8 +13502,6 @@
 +#
 +#	Sub-makefile for NPTL portion of the library.
 +#
-+include ../option-groups.mak
-+
 +subdir	:= fbtl
 +
 +headers := pthread.h semaphore.h bits/semaphore.h
@@ -13598,7 +13596,7 @@
 +		      pt-raise pt-system \
 +		      flockfile ftrylockfile funlockfile \
 +		      sigaction \
-+		      pt-allocrtsig \
++		      herrno res pt-allocrtsig \
 +		      pthread_kill_other_threads \
 +		      pthread_getaffinity pthread_setaffinity \
 +		      pthread_attr_getaffinity pthread_attr_setaffinity \
@@ -13626,8 +13624,6 @@
 +#		      pthread_setresuid \
 +#		      pthread_setgid pthread_setegid pthread_setregid \
 +#		      pthread_setresgid
-+
-+libpthread-routines-$(OPTION_EGLIBC_INET) := herrno res 
 +
 +libpthread-shared-only-routines = version pt-allocrtsig unwind-forcedunwind
 +libpthread-static-only-routines = pthread_atfork
@@ -13739,14 +13735,14 @@
 +	tst-cancel6 tst-cancel7 tst-cancel8 tst-cancel9 tst-cancel10 \
 +	tst-cancel11 tst-cancel12 tst-cancel13 tst-cancel14 tst-cancel15 \
 +	tst-cancel16 tst-cancel17 tst-cancel18 tst-cancel19 tst-cancel20 \
-+	tst-cancel21 tst-cancel22 tst-cancel23 tst-cancel25 \
++	tst-cancel21 tst-cancel22 tst-cancel23 tst-cancel24 tst-cancel25 \
 +	tst-cancel-self tst-cancel-self-cancelstate \
 +	tst-cancel-self-canceltype tst-cancel-self-testcancel \
 +	tst-cleanup0 tst-cleanup1 tst-cleanup2 tst-cleanup3 tst-cleanup4 \
 +	tst-flock1 tst-flock2 \
 +	tst-signal1 tst-signal2 tst-signal3 tst-signal4 tst-signal5 \
 +	tst-signal6 tst-signal7 \
-+	tst-exec2 tst-exec3 tst-exec4 \
++	tst-exec1 tst-exec2 tst-exec3 tst-exec4 \
 +	tst-exit1 tst-exit2 tst-exit3 \
 +	tst-stdio1 tst-stdio2 \
 +	tst-stack1 tst-stack2 tst-stack3 tst-pthread-getattr \
@@ -13754,29 +13750,19 @@
 +	tst-unload \
 +	tst-dlsym1 \
 +	tst-sysconf \
-+	tst-locale2 \
++	tst-locale1 tst-locale2 \
 +	tst-umask1 \
 +	tst-popen1 \
 +	tst-clock1 \
 +	tst-context1 \
 +	tst-sched1 \
++	tst-backtrace1 \
 +	tst-abstime \
 +	tst-vfork1 tst-vfork2 tst-vfork1x tst-vfork2x \
 +	tst-getpid1 tst-getpid2 tst-getpid3 \
 +	tst-initializers1 $(patsubst %,tst-initializers1-%,c89 gnu89 c99 gnu99)
 +xtests = tst-setuid1 tst-setuid1-static tst-mutexpp1 tst-mutexpp6 tst-mutexpp10
 +test-srcs = tst-oddstacklimit
-+
-+# This test uses the posix_spawn functions.
-+tests-$(OPTION_EGLIBC_SPAWN) += tst-exec1
-+
-+# This test uses the 'backtrace' functions.
-+tests-$(OPTION_EGLIBC_BACKTRACE) += tst-backtrace1
-+
-+# This test is written in C++.
-+tests-$(OPTION_EGLIBC_CXX_TESTS) += tst-cancel24
-+
-+tests-$(OPTION_EGLIBC_LOCALE_CODE) += tst-locale1 
 +
 +# Files which must not be linked with libpthread.
 +tests-nolibpthread = tst-unload
@@ -13796,13 +13782,8 @@
 +	 tst-oncex3 tst-oncex4
 +endif
 +ifeq ($(build-shared),yes)
-+tests += tst-atfork2 tst-tls3 tst-tls4 tst-tls5 tst-fini1 \
++tests += tst-atfork2 tst-tls3 tst-tls4 tst-tls5 tst-_res1 tst-fini1 \
 +	 tst-stackguard1
-+ifeq ($(versioning),yes)
-+# struct __res_state _res is only available with
-+# symbol versioning after GLIBC_2.2.
-+tests += tst-_res1
-+endif
 +tests-nolibpthread += tst-fini1
 +ifeq ($(have-z-execstack),yes)
 +tests += tst-execstack
