@@ -25,6 +25,8 @@ glibc (2.19-0experimental2) UNRELEASED; urgency=medium
       export the ___fpscr_values symbol on SH4.
     - patches/any/local-libpic.diff: new patch from eglibc tree to install
       *_pic.a files.
+    - kfreebsd/local-fbtl.diff: update to revision 5485 (from glibc-bsd) to
+      remove EGLIBC specific code.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 May 2014 12:38:51 +0200
 
